--- a/index.html
+++ b/index.html
@@ -1,215 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
+
     <title>Landing Page</title>
-</head>
-<body>
-    <div class="box">
-        <div class="lign"></div>
-    </div>
+  </head>
+  <body>
     <nav>
-        <span id="logo">BEAUTY</span>
-        <ul class="nav__link">
-            <li><a class="link" href="#">FLAVORS</a></li>
-            <li><a class="link" href="#">STORE</a></li>
-            <li><a class="link" href="#">BLOG</a></li>
-            <li><a class="link" href="#">ABOUT US</a></li>
-        </ul>
-        <span class="nav__svg">
-            <a href="#"><img src="img/svg/search.svg" alt="search button"></a>
-            <a href="#"><img src="img/svg/clock.svg" alt="caro"></a>
-            <a href="#"><img src="img/svg/editor.svg" alt="user"></a>
-        </span>
+      <span id="logo">BEAUTY</span>
+      <span id="theme-switch">
+        <i class="fa fa-sun light"></i>
+        <i class="fa fa-moon dark"></i>
+      </span>
+      <ul class="nav__link">
+        <li><a class="link" href="#">FLAVORS</a></li>
+        <li><a class="link" href="#store">STORE</a></li>
+        <li><a class="link" href="#">BLOG</a></li>
+        <li><a class="link" href="#">ABOUT US</a></li>
+      </ul>
+      <div class="box">
+        <div class="lign"></div>
+      </div>
+      <span class="nav__svg">
+        <i class="fa-solid fa-user"></i>
+        <i class="fa-solid fa-search"></i>
+        <i class="fa-solid fa-lock"></i>
+      </span>
     </nav>
 
     <header>
-        <div class="links">
-            <div class="social_link">
-                <a href="#">fb</a>
-                <a href="#">tw</a>
-                <a href="#">in</a>
-            </div>
-            <div class="branch">
-                <a href="#">manufacturing</a>
-                <a href="#">packaging</a>
-                <a href="#">team</a>
-            </div>
-        </div>
-
-        <div class="header">
-            <!-- <img src="img/cofee.jpg" alt="product"> -->
-            <div class="header__content">
-                <h1>sunday reily</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nulla, natus tenetur perspiciatis quae illo expedita architecto, inventore magnam rerum officia, reiciendis nostrum sapiente repellendus facilis explicabo sunt assumenda modi?
-                Voluptatibus hic iste sint aspernatur facilis earum.</p>
-                <a href="#">Buy Now  <span class="price">$39.88</span></a>
-            </div>
-        </div>
+      <div class="header__content">
+        <h1 id="header__title">Iphone 12 PRO MAX</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nulla,
+          natus tenetur perspiciatis quae illo expedita architecto, inventore
+          magnam rerum officia, reiciendis nostrum sapiente repellendus facilis
+          explicabo sunt assumenda modi? Voluptatibus hic iste sint aspernatur
+          facilis earum.
+        </p>
+        <a href="#">Buy Now <span class="price">$39.88</span></a>
+      </div>
     </header>
 
     <div class="information">
-        <p>Trusted by over 350,000+ Clients worldwide since 2008</p>
-        <div class="rating">
-            <span class="bolder__title">4.6</span>
-            <span>
-                <img src="img/svg/display-brightness-symbolic.svg" alt="">
-                <img src="img/svg/display-brightness-symbolic.svg" alt="">
-                <img src="img/svg/display-brightness-symbolic.svg" alt="">
-                <img src="img/svg/display-brightness-symbolic.svg" alt="">
-                <img src="img/svg/display-brightness-symbolic.svg" alt="">
-            </span>
-            <span>3.158 Ratings</span>
-        </div>
+      <p>Trusted by over 350,000+ Clients worldwide since 2008</p>
+      <div class="rating">
+        <span class="bolder__title">4.6</span>
+        <span>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+        </span>
+        <span>3.158 Ratings</span>
+      </div>
 
-        <div class="average">
-            <span class="bolder__title">6M+</span>
-            <span>Worldwide Product sole per year</span>
-        </div>
+      <div class="average">
+        <span class="bolder__title">6M+</span>
+        <span>Worldwide Product sole per year</span>
+      </div>
     </div>
 
     <section class="branding">
-        <h2 class="section__title">Our Benefits</h2>
-        <div class="brand">
-            <div>
-                <img src="img/svg/im-twitter.svg" alt="icon">
-                <h4>Best Quality</h4>
-                <p>natus tenetur perspiciatis quae illo expedita architecto.natus tenetur perspiciatis quae illo expedita architecto</p>
-            </div>
-             <div>
-                <img src="img/svg/im-twitter.svg" alt="icon">
-                <h4>Free Shipping</h4>
-                <p>natus tenetur perspiciatis quae illo expedita architecto.natus tenetur perspiciatis quae illo expedita architecto</p>
-            </div>
-             <div>
-                <img src="img/svg/im-twitter.svg" alt="icon">
-                <h4>Warranty</h4>
-                <p>natus tenetur perspiciatis quae illo expedita architecto.natus tenetur perspiciatis quae illo expedita architecto</p>
-            </div>
+      <h2 class="section__title">Our Benefits</h2>
+      <div class="brand">
+        <div>
+          <img src="img/svg/im-twitter.svg" alt="icon" />
+          <h4>Best Quality</h4>
+          <p>
+            natus tenetur perspiciatis quae illo expedita architecto.natus
+            tenetur perspiciatis quae illo expedita architecto
+          </p>
         </div>
+        <div>
+          <img src="img/svg/im-twitter.svg" alt="icon" />
+          <h4>Free Shipping</h4>
+          <p>
+            natus tenetur perspiciatis quae illo expedita architecto.natus
+            tenetur perspiciatis quae illo expedita architecto
+          </p>
+        </div>
+        <div>
+          <img src="img/svg/im-twitter.svg" alt="icon" />
+          <h4>Warranty</h4>
+          <p>
+            natus tenetur perspiciatis quae illo expedita architecto.natus
+            tenetur perspiciatis quae illo expedita architecto
+          </p>
+        </div>
+      </div>
     </section>
 
-    <section class="branding">
-        <h2 class="section__title">Best Selling</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nulla, natus tenetur perspiciatis quae illo expedita architecto, inventore magnam rerum officia, reiciendis nostrum sapiente repellendus facilis explicabo sunt assumenda modi? Voluptatibus hic iste sint. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nulla, natus tenetur perspiciatis quae illo expedita architecto, inventore magnam rerum officia.
-        </p>
-        <div class="top__product">
-            <div>
-                <img src="img/note.jpg" alt="icon">
-                <h4>Terminux </h4>
-                <p>natus tenetur perspiciatis quae illo expedita architecto.natus tenetur perspiciatis quae illo expedita architecto</p>
-                <a href="#">Buy Now  <span class="price">$39.88</span></a>
-            </div>
-                <div>
-                <img src="img/smile.png" alt="icon">
-                <h4>Laptop LP44</h4>
-                <p>natus tenetur perspiciatis quae illo expedita architecto.natus tenetur perspiciatis quae illo expedita architecto</p>
-                <a href="#">Buy Now  <span class="price">$39.88</span></a>
-            </div>
-                <div>
-                <img src="img/work.jpg" alt="icon">
-                <h4>Dalition XP</h4>
-                <p>natus tenetur perspiciatis quae illo expedita architecto.natus tenetur perspiciatis quae illo expedita architecto</p>
-                <a href="#">Buy Now  <span class="price">$39.88</span></a>
-            </div>
+    <section id="store" class="branding">
+      <h2 class="section__title">Best Selling</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nulla,
+        natus tenetur perspiciatis quae illo expedita architecto, inventore
+        magnam rerum officia, reiciendis nostrum sapiente repellendus facilis
+        explicabo sunt assumenda modi? Voluptatibus hic iste sint. Lorem, ipsum
+        dolor sit amet consectetur adipisicing elit. Minus nulla, natus tenetur
+        perspiciatis quae illo expedita architecto, inventore magnam rerum
+        officia.
+      </p>
+      <div class="top__product">
+        <div>
+          <img src="img/iphone-10.jpg" alt="iphone-11" />
+          <h4>Iphone 11 PRO</h4>
+          <p>
+            natus tenetur perspiciatis quae illo expedita architecto.natus
+            tenetur perspiciatis quae illo expedita architecto
+          </p>
+          <a href="#">Buy Now <span class="price">$39.88</span></a>
         </div>
+        <div>
+          <img src="img/pixel-7.jpg" alt="pixel-3" />
+          <h4>Google Pixel 3</h4>
+          <p>
+            natus tenetur perspiciatis quae illo expedita architecto.natus
+            tenetur perspiciatis quae illo expedita architecto
+          </p>
+          <a href="#">Buy Now <span class="price">$39.88</span></a>
+        </div>
+        <div>
+          <img src="img/mac-book.jpg" alt="mac-book" />
+          <h4>mac book PRO</h4>
+          <p>
+            natus tenetur perspiciatis quae illo expedita architecto.natus
+            tenetur perspiciatis quae illo expedita architecto
+          </p>
+          <a href="#">Buy Now <span class="price">$39.88</span></a>
+        </div>
+      </div>
     </section>
 
     <section class="about_us">
-        <div>
-            <img src="img/cofee.jpg" alt="visual art">
-        </div>
-        <div>
-            <h2 class="section__title">About Us</h2>
-            <p>natus tenetur perspiciatis quae illo expedita architecto.natus tenetur perspiciatis quae illo expedita architecto</p>
-            <a href="#">Read More</a>
-        </div>
+      <div>
+        <h2 class="section__title">About Us</h2>
+        <p>
+          natus tenetur perspiciatis quae illo expedita architecto.natus tenetur
+          perspiciatis quae illo expedita architecto
+        </p>
+        <a href="#">Read More</a>
+      </div>
     </section>
 
     <section class="testimonials">
-        <div>
-            <h2 class="section__title">Testimonials</h2>
-            <div class="slide_btn">
-                <img src="img/svg/port.svg" alt="previous">
-                <img src="img/svg/port.svg" alt="next">
-            </div>
+      <div>
+        <h2 class="section__title">Testimonials</h2>
+        <div class="slide_btn">
+          <i class="fa fa-chevron-circle-left"></i>
+          <i class="fa fa-chevron-circle-right"></i>
         </div>
-        
-        <div class="card__container">
-            <div class="card">
-                <div class="start">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                </div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nulla, natus tenetur perspiciatis quae illo expedita architecto, inventore magnam rerum officia,
-                </p>
-                <div class="profil">
-                    <img src="img/work.jpg" alt="">
-                    <div>
-                        <h5>Sarah Jock</h5>
-                        <p>E-vendor, enter-ship</p>
-                    </div>
-                </div>
+      </div>
+
+      <div class="card__container">
+        <div class="card">
+          <div class="start">
+            <i class="fa fa-star-half-alt"></i>
+            <i class="fa fa-star-half-alt"></i>
+            <i class="fa fa-star-half-alt"></i>
+          </div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+            nulla, natus tenetur perspiciatis quae illo expedita architecto,
+            inventore magnam rerum officia,
+          </p>
+          <div class="profil">
+            <img src="img/lea.jpg" alt="" />
+            <div>
+              <h5>Sarah Jock</h5>
+              <p>E-vendor, enter-ship</p>
             </div>
-
-
-            <div class="card">
-                <div class="start">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                </div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nulla, natus tenetur perspiciatis quae illo expedita architecto, inventore magnam rerum officia,
-                </p>
-                <div class="profil">
-                    <img src="img/work.jpg" alt="">
-                    <div>
-                        <h5>Sarah Jock</h5>
-                        <p>E-vendor, enter-ship</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="start">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                    <img src="img/svg/draw-star.svg" alt="">
-                </div>
-
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus nulla, natus tenetur perspiciatis quae illo expedita architecto, inventore magnam rerum officia,
-                </p>
-                <div class="profil">
-                    <img src="img/work.jpg" alt="">
-                    <div>
-                        <h5>Sarah Jock</h5>
-                        <p>E-vendor, enter-ship</p>
-                    </div>
-                </div>
-            </div>
-
+          </div>
         </div>
 
+        <div class="card">
+          <div class="start">
+            <i class="fa fa-star-half-alt"></i>
+            <i class="fa fa-star-half-alt"></i>
+            <i class="fa fa-star-half-alt"></i>
+          </div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+            nulla, natus tenetur perspiciatis quae illo expedita architecto,
+            inventore magnam rerum officia,
+          </p>
+          <div class="profil">
+            <img src="img/marcus.jpg" alt="" />
+            <div>
+              <h5>Sarah Jock</h5>
+              <p>E-vendor, enter-ship</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="start">
+            <i class="fa fa-star-half-alt"></i>
+            <i class="fa fa-star-half-alt"></i>
+            <i class="fa fa-star-half-alt"></i>
+          </div>
+
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
+            nulla, natus tenetur perspiciatis quae illo expedita architecto,
+            inventore magnam rerum officia,
+          </p>
+          <div class="profil">
+            <img src="img/anna.jpg" alt="" />
+            <div>
+              <h5>Sarah Jock</h5>
+              <p>E-vendor, enter-ship</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
+    <footer>
+      <div>Goolge developper</div>
 
-<footer>
+      <p>Copyright since 2020. Alright reserved</p>
+    </footer>
 
-    <div>Goolge developper
-    </div>
-
-    <p>Copyright since 2020. Alright reserved</p>
-
-</footer>
-
-<script src="./index.js"></script>
-</body>
+    <script src="./index.js"></script>
+  </body>
 </html>
